# seiswave

./: .gitignore  MANIFEST.in  README.md  Rec_18.seg2  ZVF_dx3_mo4.sgy  model.d  pyproject.toml  run_web_ui.sh  setup.py
PySeisSynth_backup_phase6/: __init__.py  eigen.py  main.py  synth.py
seiswave/: __init__.py  cli.py  cps_runner.py  dispersion.py  earth_model.py  eigen.py  eigen_backup.py  inversion.py  main.py  propagator.py  synth.py  web_app.py
seiswave/src_fortran/: build.bat  build.py  build.sh  cps_core.pyf  mgtarg_f2py.f  sdisp96.f  sprep96.f  spulse96.f  sregn96.f
