[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "seiswave"
version = "0.1.14"
description = "A comprehensive Python framework for seismic surface wave forward modeling and inversion."
readme = "README.md"
authors = [
    { name = "Yudha Satyawan", email = "yudhastyawan@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "streamlit>=1.20",
    "plotly>=5.10",
    "obspy>=1.3"
]

[project.scripts]
seiswave-web = "seiswave.cli:main"
